--- a/AASMAPlayer/AASMAHoshimi.csproj
+++ b/AASMAPlayer/AASMAHoshimi.csproj
@@ -68,6 +68,8 @@
     <Compile Include="AASMAPlayer.cs" />
     <Compile Include="Examples\BuildingAI.cs" />
     <Compile Include="Examples\CommunicativeExplorer.cs" />
+    <Compile Include="ReactiveAgents\Perception.cs" />
+    <Compile Include="ReactiveAgents\ReactiveAgent.cs" />
     <Compile Include="ReactiveAgents\ReactiveAI.cs" />
     <Compile Include="ReactiveAgents\ReactiveExplorer.cs" />
     <Compile Include="Examples\PassiveContainer.cs" />
@@ -87,6 +89,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ReactiveAgents\ReactiveNeedle.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
