--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ AASMAPlayer/obj/Debug/AASMAHoshimi.csproj.FileListAbsolute.txt
 AASMAPlayer/obj/Debug/AASMAHoshimi.csprojResolveAssemblyReference.cache
 AASMAPlayer/obj/Debug/AASMAHoshimi.dll
 AASMAPlayer/obj/Debug/AASMAHoshimi.pdb
+AASMAPlayer/bin/Debug/AASMAHoshimi.dll
+AASMAPlayer/bin/Debug/AASMAHoshimi.dll
+AASMAPlayer/bin/Debug/AASMAHoshimi.pdb
+AASMAPlayer/obj/Debug/AASMAHoshimi.dll
+AASMAPlayer/obj/Debug/AASMAHoshimi.dll
+AASMAPlayer/bin/Debug/AASMAHoshimi.dll
+AASMAPlayer/obj/Debug/AASMAHoshimi.csproj.FileListAbsolute.txt
+AASMAPlayer/obj/Debug/AASMAHoshimi.pdb
