BDI agents code is now inside the class

--- a/AASMAPlayer/AASMAHoshimi.csproj
+++ b/AASMAPlayer/AASMAHoshimi.csproj
@@ -68,6 +68,7 @@
     <Compile Include="AASMAPlayer.cs" />
     <Compile Include="Agents\Agent.cs" />
     <Compile Include="Agents\DeliberativeAgents\DeliberativeAgent.cs" />
+    <Compile Include="Agents\DeliberativeAgents\DeliberativeAI.cs" />
     <Compile Include="Agents\ReactiveAgents\ReactiveAgent.cs" />
     <Compile Include="Agents\ReactiveAgents\ReactiveAI.cs" />
     <Compile Include="Agents\ReactiveAgents\ReactiveContainer.cs" />
