Hybrid agents done. Fixed bug in protectors

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ AASMAPlayer/obj/Debug/AASMAHoshimi.dll
 AASMAPlayer/bin/Debug/AASMAHoshimi.dll
 AASMAPlayer/obj/Debug/AASMAHoshimi.csproj.FileListAbsolute.txt
 AASMAPlayer/obj/Debug/AASMAHoshimi.pdb
+AASMAPlayer/bin/Debug/AASMAHoshimi.dll
+AASMAPlayer/bin/Debug/AASMAHoshimi.pdb
+AASMAPlayer/obj/Debug/AASMAHoshimi.dll
+AASMAPlayer/obj/Debug/AASMAHoshimi.pdb
