--- a/AASMAPlayer/AASMAHoshimi.csproj
+++ b/AASMAPlayer/AASMAHoshimi.csproj
@@ -75,6 +75,10 @@
     <Compile Include="Agents\DeliberativeAgents\DeliberativeProtector.cs" />
     <Compile Include="Agents\HybridAgents\HybridAgent.cs" />
     <Compile Include="Agents\HybridAgents\HybridAI.cs" />
+    <Compile Include="Agents\HybridAgents\HybridContainer.cs" />
+    <Compile Include="Agents\HybridAgents\HybridExplorer.cs" />
+    <Compile Include="Agents\HybridAgents\HybridNeedle.cs" />
+    <Compile Include="Agents\HybridAgents\HybridProtector.cs" />
     <Compile Include="Agents\PlanCheckPoint.cs" />
     <Compile Include="Agents\ReactiveAgents\ReactiveAgent.cs" />
     <Compile Include="Agents\ReactiveAgents\ReactiveAI.cs" />
