Started implementing COM agents

--- a/AASMAPlayer/AASMAHoshimi.csproj
+++ b/AASMAPlayer/AASMAHoshimi.csproj
@@ -67,6 +67,12 @@
     <Compile Include="AASMAMessage.cs" />
     <Compile Include="AASMAPlayer.cs" />
     <Compile Include="Agents\Agent.cs" />
+    <Compile Include="Agents\COMHybridAgents\COMHybridAgent.cs" />
+    <Compile Include="Agents\COMHybridAgents\COMHybridAI.cs" />
+    <Compile Include="Agents\COMHybridAgents\ComHybridContainer.cs" />
+    <Compile Include="Agents\COMHybridAgents\COMHybridExplorer.cs" />
+    <Compile Include="Agents\COMHybridAgents\COMHybridNeedle.cs" />
+    <Compile Include="Agents\COMHybridAgents\COMHybridProtector.cs" />
     <Compile Include="Agents\DeliberativeAgents\DeliberativeAgent.cs" />
     <Compile Include="Agents\DeliberativeAgents\DeliberativeAI.cs" />
     <Compile Include="Agents\DeliberativeAgents\DeliberativeContainer.cs" />
